--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,12 +12,12 @@
                 </li>
                 <% if (locals.user) { %>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Add Blog</a>
+                        <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Vaibhav Goklani
+                            <%= user.fullName %>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
