--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,15 +11,15 @@
   <div class="container mt-4">
     <form action="/user/signup" method="post">
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="fullName" placeholder="name@example.com" name="fullName">
+        <input type="text" class="form-control" id="fullName" placeholder="name@example.com" name="fullName" required>
         <label for="fullName">Full Name</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
+        <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email" required>
         <label for="email">Email address</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+        <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
         <label for="password">Password</label>
       </div>
       <button type="submit" class="btn btn-primary mb-3">Submit</button>
