--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -10,12 +10,31 @@
     <div class="container mt-4">
         <h1><%= locals.blog.title %></h1>
         <img src="<%= locals.blog.coverImageUrl %>" width="50%">
-        <pre class="mt-3"><%= locals.blog.body %></pre>
+        <pre class="mt-3" style="white-space: pre-wrap;"><%= locals.blog.body %></pre>
     </div>
 
     <div class="container mt-4">
         <img src="<%= locals.blog.createdBy.profileImageUrl %>" class="rounded-circle" width="3%">
         <span><%= locals.blog.createdBy.fullName %></span>
+    </div>
+
+    <div class="container mt-4">
+        <h1 class="mb-3">Comments (<%= locals.comments.length %>)</h1>
+        <% if (locals.user) { %>
+            <form action="/blog/comment/<%= locals.blog._id %>" method="post">
+                <div class="mb-3">
+                    <textarea class="form-control" id="content" name="content" required placeholder="Enter your comment"></textarea>
+                </div>
+                <button type="submit" class="btn btn-sm btn-primary mb-3">Add</button>
+            </form>
+        <% } %>
+        <% locals.comments.forEach(comment => { %>
+            <div>
+                <img src="<%= comment.createdBy.profileImageUrl %>" class="rounded-circle" width="3%">
+                <span><%= comment.createdBy.fullName %></span>
+                <pre style="white-space: pre-wrap;"><%= comment.content %></pre>
+            </div>
+        <% }) %>
     </div>
 
     <%- include('./partials/script') %>
